<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.BuscaActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endereco"
        android:layout_marginTop="7px"
        android:id="@+id/endereco"
        android:textIsSelectable="true"
        android:textSize="10pt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBusca"
        android:id="@+id/btnBusca"
        android:onClick="buscar"
        android:layout_below="@+id/endereco"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5px"/>

    <EditText
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:id="@+id/edEndereco"
        android:hint="@string/hintEndereco"
        android:layout_width="0dp"
        android:layout_alignRight="@+id/btnBusca"
        android:layout_alignEnd="@+id/btnBusca"
        android:layout_toRightOf="@+id/endereco"
        android:layout_toEndOf="@+id/endereco"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtTitulo"
        android:id="@+id/txtTitulo"
        android:layout_below="@+id/btnBusca"
        android:layout_toRightOf="@+id/endereco"
        android:layout_toEndOf="@+id/endereco" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/txtTitulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

    </ScrollView>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/scrollView" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnStar"
        android:background="@drawable/button_selector"
        android:layout_below="@+id/edEndereco"
        android:layout_toLeftOf="@+id/btnBusca"
        android:layout_toStartOf="@+id/btnBusca"
        android:onClick="cadastrar" />


</RelativeLayout>
